Graph back in brush-table

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <!-- <script src="../node_modules/chart.js"></script> -->
 </head>
 <body>
   <app-root></app-root>
