--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,13 @@
 
   <!-- Digest Authorization -->
   <script type="text/javascript" src="assets/js/digestAuthRequest.js"></script>
+
+  <!-- If user has JS disabled -->
+  <noscript>
+    For full functionality of this site it is necessary to enable JavaScript.
+    Here are the <a href="https://www.enable-javascript.com/">
+    instructions how to enable JavaScript in your web browser</a>.
+  </noscript>
 </body>
 </html>
 
